holyc-parser/tests/corpus/passing/081-expr-expr-fun-call-noargs.hc
U0 EFnA() { return; }
EFnA();
