holyc-parser/tests/corpus/failing/020-errors-err-undef-goto.hc
U0 EUG_f() { goto EUG_nowhere; }
